--- a/style.css
+++ b/style.css
@@ -124,12 +124,12 @@ margin-top: 100px;
     padding-left: 40px;
     margin-right: 180px;
 }
-.extra-class-2{
+.contribute-1{
     margin-top: 80px;
     margin-right: 50px;
     width: 50%;
 }
-.extra-class-2 h1{
+.contribute-1 h1{
     font-size: 30px;
 }
 .half-width img{
@@ -148,14 +148,14 @@ margin-top: 100px;
     border-radius: 5px;
     margin-top: -500px;
 }
-.extra-class-3{
+.contribute-2{
     width: 50%;
     margin-left: 0%;
     margin-top: 180px;
     text-align: center;
     margin-right: 180px;
 }
-.extra-class-3 h1{
+.contribute-2 h1{
     font-size: 30px;
 }
 .about-us{
