--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
     height: 100vh;
     width: 100%;
     position: relative;
+    border-bottom: 7px solid rgb(14, 111, 167);
 }
 .donate-button{
     text-decoration: none;
